# ChangeLog

## 0.9.10
- `#PARSE.funcName()` retrieves the name of a function.
- `#PARSE.range()` creates integer ranges based on specified criteria.
- `#DOM.getButton()` does not add undefined id if none is passed.
- `#DOM.addEvent()` and `#DOM.removeEvent()`.

## 0.9.9
- `#DOM.shuffleElements()` replaces `#DOM.shuffleNodes()`, still a copy of the former method. A bug on the number of elements in the order is fixed, and also the method is more reliable to detect the children elements also in old browsers.

## 0.9.8
- `#DOM.write()` accepts undefined as text, and adds an empty string.

## 0.9.7
- `#DOM.sprintf()` has default %strong and %em styles.
- Polyfill for `#Date.getISOString()`.

## 0.9.5
- An empty console and console.log objects are added if undefined. This avoids throwing errors in old browsers.

## 0.9.4
- `#PARSE.getQueryString()` accepts referer as second parameter.
- `#DOM.disableRightClick()` and `#DOM.enableRightClick()`.

## 0.9.3
- `#QUEUE.getRemoveCb()` to get remove callbacks inside loops.
- Better support for execution of callbacks after deletion and copy of files inside `#FS`.

## 0.9.2
- `#DOM.removeClass()` improved.

## 0.9.1
- `#QUEUE class added plust tests. It can manage a simple queue.

## 0.8.9
- `#DOM.addClass()` extra space fix.
- `#DOM.addAttributes2Elem()`: 'className' as an alternative to 'class'.

## 0.8.8
- `#DOM.shuffleNodes()` correctly shuffles the nodes, and returns the id of the elements in the order used to append them.
- `PARSE.getQueryString()` correctly returns the full query string when no argument is passed.

## 0.8.7
- `#DOM.shuffleNodes()` bug fix.

## 0.8.6
- `#PARSE.getQueryString()` completely rewritten.
- `#OBJ.mixout()` and `#OBJ.mixcommon()` consider the null value
- `#EVAL.eval()` more correctly uses typeof checking for window object

## 0.8.5
- Cosmetic changes
- `#DOM.getBlankPage()` removed from API
- `#DOM.removeChildrenFromNode()` does not have a return value

## 0.8.4