@@ -47,10 +47,9 @@
      */
     DOM.write = function(root, text) {
         var content;
-        if (!root) return;
-        if ('undefined' === typeof text) text = "";
-        content = (!JSUS.isNode(text) || !JSUS.isElement(text)) ?
-            document.createTextNode(text) : text;
+        if ('undefined' === typeof text || text === null) text = "";
+        if ('string' === typeof text) content = document.createTextNode(text);
+        else if (!JSUS.isNode(text) || !JSUS.isElement(text)) content = text;
         root.appendChild(content);
         return content;
     };
@@ -72,9 +71,10 @@
      * @see DOM.addBreak
      */
     DOM.writeln = function(root, text, rc) {
-        if (!root) return;
-        var br = this.addBreak(root, rc);
-        return (text) ? DOM.write(root, text) : br;
+        var content;
+        content = DOM.write(root, text);
+        this.addBreak(root, rc);
+        return content;
     };
 
     /**
@@ -232,8 +232,8 @@
      * @return {boolean} TRUE, if the the object is a DOM node
      */
     DOM.isNode = function(o) {
+        if ('object' !== typeof o) return false;
         return 'object' === typeof Node ? o instanceof Node :
-            'object' === typeof o &&
             'number' === typeof o.nodeType &&
             'string' === typeof o.nodeName;
     };
